--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ beautifulsoup4==4.13.3
 bleach==6.2.0
 certifi==2025.1.31
 cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 comm==0.2.2
 contourpy==1.3.1
@@ -22,6 +23,7 @@ executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.56.0
 fqdn==1.5.1
+graffitiai==0.1.17
 graphcalc==0.1.20
 grinpy==19.7a0
 h11==0.14.0
@@ -93,6 +95,7 @@ PyYAML==6.0.2
 pyzmq==26.2.1
 questionary==2.1.0
 referencing==0.36.2
+reportlab==4.3.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
